--- a/public/input.css
+++ b/public/input.css
@@ -14,6 +14,6 @@
     @apply bg-primary-red px-7 py-3 rounded-[500px] mx-5  transition-all ease-in hover:contrast-75;
   }
   .small-btn{
-    @apply bg-primary-red px-4 py-2 rounded-[500px] transition-all ease-in hover:contrast-75;
+    @apply bg-primary-red px-4 py-2 rounded-[500px] mx-3 transition-all ease-in hover:contrast-75;
   }
 }
